# periodic-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: reuse.rs  simple.rs
src/: instant_iter.rs  lib.rs  period.rs  planner.rs
